--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "bluebird": "^3.0.5",
+    "fs-extra": "^0.26.2",
     "globby": "^4.0.0"
   },
   "devDependencies": {
