--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "promse-driven cli task-runner",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test/test.js"
   },
   "author": "Jacob Blakely",
   "license": "MIT",
   "dependencies": {
     "bluebird": "^3.0.5",
+    "co": "^4.6.0",
     "fs-extra": "^0.26.2",
     "globby": "^4.0.0"
   },
